k8s-specifications/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: result
  name: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      imagePullSecrets:
      - name: harbor-registry-secret
      containers:
      - image: hw-harbor.bluesunnywings.com/sysdig-poc/result:latest
        name: result
        ports:
        - containerPort: 80
          name: result
