k8s-specifications/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
  name: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      imagePullSecrets:
      - name: harbor-registry-secret
      containers:
      - image: hw-harbor.bluesunnywings.com/sysdig-poc/vote:latest
        name: vote
        ports:
        - containerPort: 80
          name: vote
