k8s-specifications/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      imagePullSecrets:
      - name: harbor-registry-secret
      containers:
      - image: hw-harbor.bluesunnywings.com/sysdig-poc/worker:latest
        name: worker
